update deps, JAVA 20